# openenv-vendor-compliance

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  check_submission.py  client.py  grading.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: tasks.json
examples/: run_baseline.py
server/: Dockerfile  __init__.py  app.py  requirements.txt  vendor_onboarding_environment.py
tests/: test_environment.py  test_grading.py  test_http_server.py  test_models.py
